JCF2: improved 'Clarify/Find and Replace/Uses' page layout
git-svn-id: http://svn.freepascal.org/svn/lazarus/trunk@24932 4005530d-fff6-0310-9dd1-cebe43e6787f

--- a/components/jcf2/Ui/Settings/frUses.lfm
+++ b/components/jcf2/Ui/Settings/frUses.lfm
@@ -3,80 +3,136 @@ inherited fUses: TfUses
   Width = 419
   ClientHeight = 317
   ClientWidth = 419
+  OnResize = FrameResize
+  TabOrder = 0
   DesignLeft = 389
   DesignTop = 253
   object cbRemoveEnabled: TCheckBox[0]
-    Left = 8
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = Owner
+    Left = 6
     Height = 17
-    Top = 4
+    Top = 6
     Width = 57
+    BorderSpacing.Around = 6
     Caption = 'Remove'
     OnClick = cbRemoveEnabledClick
     TabOrder = 0
   end
   object cbInsertInterface: TCheckBox[1]
-    Left = 8
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = mRemove
+    AnchorSideTop.Side = asrBottom
+    Left = 6
     Height = 17
-    Top = 108
+    Top = 111
     Width = 116
+    BorderSpacing.Top = 6
+    BorderSpacing.Around = 6
     Caption = 'Insert into Interface'
     OnClick = cbInsertInterfaceClick
     TabOrder = 2
   end
   object cbInsertImplementation: TCheckBox[2]
-    Left = 180
+    AnchorSideLeft.Control = mInsertImplementation
+    AnchorSideTop.Control = cbInsertInterface
+    AnchorSideTop.Side = asrCenter
+    Left = 208
     Height = 17
-    Top = 108
+    Top = 111
     Width = 145
     Caption = 'Insert into Implementation'
     OnClick = cbInsertImplementationClick
     TabOrder = 4
   end
   object cbFindReplace: TCheckBox[3]
-    Left = 8
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = mInsertInterface
+    AnchorSideTop.Side = asrBottom
+    Left = 6
     Height = 17
-    Top = 212
+    Top = 216
     Width = 56
+    BorderSpacing.Top = 6
+    BorderSpacing.Around = 6
     Caption = 'Replace'
     OnClick = cbFindReplaceClick
     TabOrder = 6
   end
   object mRemove: TMemo[4]
-    Left = 8
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = cbRemoveEnabled
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = mInsertImplementation
+    Left = 6
     Height = 70
-    Top = 24
-    Width = 160
+    Top = 29
+    Width = 190
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Right = 6
+    BorderSpacing.Around = 6
     TabOrder = 1
   end
   object mInsertInterface: TMemo[5]
-    Left = 8
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = cbInsertInterface
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = mInsertImplementation
+    Left = 6
     Height = 70
-    Top = 128
-    Width = 160
+    Top = 134
+    Width = 190
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Right = 6
+    BorderSpacing.Around = 6
     TabOrder = 3
   end
   object mFind: TMemo[6]
-    Left = 8
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = cbFindReplace
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = mInsertImplementation
+    Left = 6
     Height = 70
-    Top = 232
-    Width = 160
+    Top = 239
+    Width = 190
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Right = 6
+    BorderSpacing.Around = 6
     TabOrder = 7
   end
   object mInsertImplementation: TMemo[7]
-    Left = 180
+    AnchorSideTop.Control = cbInsertImplementation
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Control = mInsertInterface
+    AnchorSideBottom.Side = asrBottom
+    Left = 208
     Height = 70
-    Top = 128
-    Width = 160
+    Top = 134
+    Width = 205
+    Anchors = [akTop, akRight, akBottom]
+    BorderSpacing.Top = 6
+    BorderSpacing.Right = 6
     Lines.Strings = (
       ''
     )
     TabOrder = 5
   end
   object mReplace: TMemo[8]
-    Left = 180
+    AnchorSideLeft.Control = mInsertImplementation
+    AnchorSideTop.Control = mFind
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Control = mFind
+    AnchorSideBottom.Side = asrBottom
+    Left = 208
     Height = 70
-    Top = 232
-    Width = 160
+    Top = 239
+    Width = 205
+    Anchors = [akTop, akLeft, akRight, akBottom]
+    BorderSpacing.Right = 6
     TabOrder = 8
   end
 end
