--- a/components/jcf2/Ui/Settings/frTransform.lfm
+++ b/components/jcf2/Ui/Settings/frTransform.lfm
@@ -5,19 +5,30 @@ inherited fTransform: TfTransform
   ClientWidth = 412
   TabOrder = 0
   object cbBlockEndSemicolons: TCheckBox[0]
-    Left = 8
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = rbBeginEnd
+    AnchorSideTop.Side = asrBottom
+    Left = 6
     Height = 17
-    Top = 112
+    Top = 93
     Width = 234
+    BorderSpacing.Around = 6
     Caption = 'Put &semicolons after last statement in a block'
     TabOrder = 0
   end
   object rbBeginEnd: TRadioGroup[1]
-    Left = 8
-    Height = 93
-    Top = 4
-    Width = 395
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = Owner
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 6
+    Height = 81
+    Top = 6
+    Width = 400
+    Anchors = [akTop, akLeft, akRight]
     AutoFill = True
+    AutoSize = True
+    BorderSpacing.Around = 6
     Caption = 'Add or Remove &begin and end from single statements'
     ChildSizing.LeftRightSpacing = 6
     ChildSizing.TopBottomSpacing = 6
@@ -27,8 +38,8 @@ inherited fTransform: TfTransform
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 75
-    ClientWidth = 391
+    ClientHeight = 63
+    ClientWidth = 396
     Items.Strings = (
       'Add begin and end to single statements'
       'Leave begin and end as is'
@@ -37,17 +48,22 @@ inherited fTransform: TfTransform
     TabOrder = 1
   end
   object bgSortUses: TGroupBox[2]
-    Left = 8
-    Height = 174
-    Top = 139
-    Width = 166
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = cbBlockEndSemicolons
+    AnchorSideTop.Side = asrBottom
+    Left = 6
+    Height = 139
+    Top = 116
+    Width = 154
     AutoSize = True
-    BorderSpacing.InnerBorder = 6
+    BorderSpacing.Around = 6
     Caption = 'Sort &uses clauses'
-    ClientHeight = 156
-    ClientWidth = 162
+    ClientHeight = 121
+    ClientWidth = 150
     TabOrder = 2
     object cbSortInterfaceUses: TCheckBox
+      AnchorSideLeft.Control = bgSortUses
+      AnchorSideTop.Control = bgSortUses
       Left = 6
       Height = 17
       Top = 6
@@ -57,45 +73,59 @@ inherited fTransform: TfTransform
       TabOrder = 0
     end
     object cbSortImplementationUses: TCheckBox
+      AnchorSideLeft.Control = bgSortUses
+      AnchorSideTop.Side = asrBottom
       Left = 6
       Height = 17
-      Top = 29
+      Top = 6
       Width = 138
       BorderSpacing.Around = 6
       Caption = 'Sort i&mplementation uses'
       TabOrder = 1
     end
     object cbBreakUsesSortOnComment: TCheckBox
+      AnchorSideLeft.Control = bgSortUses
+      AnchorSideTop.Control = cbBreakUsesSortOnReturn
+      AnchorSideTop.Side = asrBottom
       Left = 6
       Height = 17
-      Top = 98
+      Top = 75
       Width = 106
       BorderSpacing.Around = 6
       Caption = 'Break on &comment'
       TabOrder = 2
     end
     object cbBreakUsesSortOnReturn: TCheckBox
+      AnchorSideLeft.Control = bgSortUses
+      AnchorSideTop.Control = cbSortProgramUses
+      AnchorSideTop.Side = asrBottom
       Left = 6
       Height = 17
-      Top = 75
+      Top = 52
       Width = 93
       BorderSpacing.Around = 6
       Caption = 'Break on &return'
       TabOrder = 3
     end
     object cbNoComments: TCheckBox
+      AnchorSideLeft.Control = bgSortUses
+      AnchorSideTop.Control = cbBreakUsesSortOnComment
+      AnchorSideTop.Side = asrBottom
       Left = 6
       Height = 17
-      Top = 121
+      Top = 98
       Width = 129
       BorderSpacing.Around = 6
       Caption = 'Only with no comments'
       TabOrder = 4
     end
     object cbSortProgramUses: TCheckBox
+      AnchorSideLeft.Control = bgSortUses
+      AnchorSideTop.Control = cbSortImplementationUses
+      AnchorSideTop.Side = asrBottom
       Left = 6
       Height = 17
-      Top = 52
+      Top = 29
       Width = 106
       BorderSpacing.Around = 6
       Caption = 'Sort &program uses'
@@ -106,13 +136,19 @@ inherited fTransform: TfTransform
     AnchorSideLeft.Control = bgSortUses
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = bgSortUses
-    Left = 180
-    Height = 116
-    Top = 139
-    Width = 128
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Control = bgSortUses
+    AnchorSideBottom.Side = asrBottom
+    Left = 166
+    Height = 139
+    Top = 116
+    Width = 240
+    Anchors = [akTop, akLeft, akRight, akBottom]
     AutoFill = True
     AutoSize = True
     BorderSpacing.Left = 6
+    BorderSpacing.Right = 6
     Caption = 'Uses sort &order'
     ChildSizing.LeftRightSpacing = 6
     ChildSizing.TopBottomSpacing = 6
@@ -123,8 +159,8 @@ inherited fTransform: TfTransform
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 98
-    ClientWidth = 124
+    ClientHeight = 121
+    ClientWidth = 236
     Items.Strings = (
       'Alphabetic'
       'Reverse Alphabetic'
