--- a/ide/frames/editor_mouseaction_options.lfm
+++ b/ide/frames/editor_mouseaction_options.lfm
@@ -2,9 +2,9 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
   Height = 487
   Width = 607
   Anchors = [akTop]
-  AutoSize = False
   ClientHeight = 487
   ClientWidth = 607
+  TabOrder = 0
   Visible = False
   DesignLeft = 153
   DesignTop = 291
@@ -16,9 +16,9 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
     Left = 6
-    Height = 16
-    Top = 376
-    Width = 485
+    Height = 14
+    Top = 382
+    Width = 492
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 6
     BorderSpacing.Right = 6
@@ -35,10 +35,10 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideTop.Side = asrCenter
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 189
+    Left = 188
     Height = 3
-    Top = 54
-    Width = 418
+    Top = 49
+    Width = 419
     Anchors = [akTop, akLeft, akRight]
   end
   object GutterDividerLabel: TLabel[2]
@@ -47,9 +47,9 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideTop.Control = HideMouseCheckBox
     AnchorSideTop.Side = asrBottom
     Left = 70
-    Height = 16
-    Top = 47
-    Width = 109
+    Height = 14
+    Top = 43
+    Width = 108
     BorderSpacing.Left = 10
     BorderSpacing.Top = 6
     BorderSpacing.Right = 10
@@ -66,7 +66,7 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideRight.Side = asrBottom
     Left = 0
     Height = 3
-    Top = 54
+    Top = 49
     Width = 60
     BorderSpacing.Top = 6
     BorderSpacing.Bottom = 6
@@ -78,7 +78,7 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideRight.Side = asrBottom
     Left = 0
     Height = 3
-    Top = 157
+    Top = 148
     Width = 60
     BorderSpacing.Top = 6
     BorderSpacing.Bottom = 6
@@ -89,8 +89,8 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideTop.Control = ResetGutterButton
     AnchorSideTop.Side = asrBottom
     Left = 70
-    Height = 16
-    Top = 150
+    Height = 14
+    Top = 142
     Width = 97
     BorderSpacing.Left = 10
     BorderSpacing.Right = 10
@@ -109,7 +109,7 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideRight.Side = asrBottom
     Left = 177
     Height = 3
-    Top = 157
+    Top = 148
     Width = 430
     Anchors = [akTop, akLeft, akRight]
   end
@@ -121,7 +121,7 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideRight.Side = asrBottom
     Left = 0
     Height = 3
-    Top = 367
+    Top = 373
     Width = 607
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Bottom = 6
@@ -134,9 +134,9 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
     Left = 6
-    Height = 16
-    Top = 376
-    Width = 485
+    Height = 14
+    Top = 382
+    Width = 492
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 6
     BorderSpacing.Right = 6
@@ -151,9 +151,9 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideTop.Control = PanelTextCheckBox
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 16
-    Top = 216
-    Width = 84
+    Height = 14
+    Top = 236
+    Width = 72
     BorderSpacing.Left = 6
     Caption = 'MiddleBtnLabel'
     ParentColor = False
@@ -163,9 +163,9 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideTop.Control = PanelTextMiddle
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 16
-    Top = 276
-    Width = 71
+    Height = 14
+    Top = 290
+    Width = 65
     BorderSpacing.Left = 6
     Caption = 'CtrLLeftLabel'
     ParentColor = False
@@ -177,7 +177,7 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideRight.Side = asrBottom
     Left = 0
     Height = 3
-    Top = 7
+    Top = 6
     Width = 60
     BorderSpacing.Bottom = 6
   end
@@ -186,9 +186,9 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = Owner
     Left = 70
-    Height = 16
+    Height = 14
     Top = 0
-    Width = 115
+    Width = 114
     BorderSpacing.Left = 10
     BorderSpacing.Right = 10
     BorderSpacing.Bottom = 6
@@ -204,10 +204,10 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideTop.Side = asrCenter
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 195
+    Left = 194
     Height = 3
-    Top = 7
-    Width = 412
+    Top = 6
+    Width = 413
     Anchors = [akTop, akLeft, akRight]
   end
   object ResetAllButton: TButton[14]
@@ -217,10 +217,10 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
-    Left = 497
-    Height = 25
-    Top = 376
-    Width = 104
+    Left = 504
+    Height = 23
+    Top = 382
+    Width = 97
     Anchors = [akTop, akRight]
     AutoSize = True
     BorderSpacing.Top = 6
@@ -237,7 +237,7 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideRight.Side = asrBottom
     Left = 6
     Height = 44
-    Top = 69
+    Top = 63
     Width = 595
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
@@ -280,8 +280,8 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 6
-    Height = 38
-    Top = 232
+    Height = 34
+    Top = 250
     Width = 595
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
@@ -290,16 +290,16 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     BorderSpacing.Bottom = 6
     BevelOuter = bvNone
     ChildSizing.ControlsPerLine = 2
-    ClientHeight = 38
+    ClientHeight = 34
     ClientWidth = 595
     TabOrder = 2
     object TextMidRadio1: TRadioButton
       AnchorSideLeft.Control = PanelTextMiddle
       AnchorSideTop.Control = PanelTextMiddle
       Left = 0
-      Height = 19
+      Height = 17
       Top = 0
-      Width = 99
+      Width = 89
       Caption = 'TextMidRadio1'
       OnChange = CheckOrRadioChange
       TabOrder = 0
@@ -308,9 +308,9 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
       AnchorSideLeft.Control = PanelTextMiddle
       AnchorSideTop.Control = PanelTextMiddle
       Left = 250
-      Height = 19
+      Height = 17
       Top = 0
-      Width = 99
+      Width = 89
       BorderSpacing.Left = 250
       Caption = 'TextMidRadio2'
       OnChange = CheckOrRadioChange
@@ -321,9 +321,9 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
       AnchorSideTop.Control = TextMidRadio1
       AnchorSideTop.Side = asrBottom
       Left = 0
-      Height = 19
-      Top = 19
-      Width = 99
+      Height = 17
+      Top = 17
+      Width = 89
       Caption = 'TextMidRadio3'
       OnChange = CheckOrRadioChange
       TabOrder = 2
@@ -334,10 +334,10 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 478
-    Height = 25
-    Top = 119
-    Width = 123
+    Left = 484
+    Height = 23
+    Top = 113
+    Width = 117
     Anchors = [akTop, akRight]
     AutoSize = True
     BorderSpacing.Right = 6
@@ -351,10 +351,10 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 489
-    Height = 25
-    Top = 336
-    Width = 112
+    Left = 493
+    Height = 23
+    Top = 344
+    Width = 108
     Anchors = [akTop, akRight]
     AutoSize = True
     BorderSpacing.Right = 6
@@ -370,8 +370,8 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 6
-    Height = 38
-    Top = 172
+    Height = 68
+    Top = 162
     Width = 595
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
@@ -380,16 +380,16 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     BorderSpacing.Bottom = 6
     BevelOuter = bvNone
     ChildSizing.ControlsPerLine = 2
-    ClientHeight = 38
+    ClientHeight = 68
     ClientWidth = 595
     TabOrder = 5
     object TextAltMode: TCheckBox
       AnchorSideLeft.Control = PanelTextCheckBox
       AnchorSideTop.Control = PanelTextCheckBox
       Left = 0
-      Height = 19
+      Height = 17
       Top = 0
-      Width = 88
+      Width = 79
       Caption = 'TextAltMode'
       OnChange = CheckOrRadioChange
       TabOrder = 0
@@ -399,34 +399,33 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
       AnchorSideTop.Control = TextAltMode
       AnchorSideTop.Side = asrBottom
       Left = 0
-      Height = 19
-      Top = 19
-      Width = 67
+      Height = 17
+      Top = 17
+      Width = 63
       Caption = 'TextDrag'
       OnChange = CheckOrRadioChange
       TabOrder = 1
     end
     object RightMoveCaret: TCheckBox
       AnchorSideLeft.Control = PanelTextCheckBox
-      AnchorSideTop.Control = TextAltMode
-      Left = 250
-      Height = 19
-      Top = 0
-      Width = 106
-      BorderSpacing.Left = 250
+      AnchorSideTop.Control = TextDrag
+      AnchorSideTop.Side = asrBottom
+      Left = 0
+      Height = 17
+      Top = 34
+      Width = 96
       Caption = 'RightMoveCaret'
       OnChange = CheckOrRadioChange
       TabOrder = 2
     end
     object TextDoubleSelLine: TCheckBox
-      AnchorSideLeft.Control = PanelTextCheckBox
+      AnchorSideLeft.Control = RightMoveCaret
       AnchorSideTop.Control = RightMoveCaret
       AnchorSideTop.Side = asrBottom
-      Left = 250
-      Height = 19
-      Top = 19
-      Width = 117
-      BorderSpacing.Left = 250
+      Left = 0
+      Height = 17
+      Top = 51
+      Width = 106
       Caption = 'TextDoubleSelLine'
       OnChange = CheckOrRadioChange
       TabOrder = 3
@@ -439,8 +438,8 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 6
-    Height = 38
-    Top = 292
+    Height = 34
+    Top = 304
     Width = 595
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
@@ -449,16 +448,16 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     BorderSpacing.Bottom = 6
     BevelOuter = bvNone
     ChildSizing.ControlsPerLine = 2
-    ClientHeight = 38
+    ClientHeight = 34
     ClientWidth = 595
     TabOrder = 6
     object CtrlLeftRadio1: TRadioButton
       AnchorSideLeft.Control = PanelTextCtrlLeft
       AnchorSideTop.Control = PanelTextCtrlLeft
       Left = 0
-      Height = 19
+      Height = 17
       Top = 0
-      Width = 95
+      Width = 87
       Caption = 'CtrlLeftRadio1'
       OnChange = CheckOrRadioChange
       TabOrder = 0
@@ -467,9 +466,9 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
       AnchorSideLeft.Control = PanelTextCtrlLeft
       AnchorSideTop.Control = PanelTextCtrlLeft
       Left = 250
-      Height = 19
+      Height = 17
       Top = 0
-      Width = 95
+      Width = 87
       BorderSpacing.Left = 250
       Caption = 'CtrlLeftRadio2'
       OnChange = CheckOrRadioChange
@@ -480,9 +479,9 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
       AnchorSideTop.Control = CtrlLeftRadio1
       AnchorSideTop.Side = asrBottom
       Left = 0
-      Height = 19
-      Top = 19
-      Width = 95
+      Height = 17
+      Top = 17
+      Width = 87
       Caption = 'CtrlLeftRadio3'
       OnChange = CheckOrRadioChange
       TabOrder = 2
@@ -493,9 +492,9 @@ inherited EditorMouseOptionsFrame: TEditorMouseOptionsFrame
     AnchorSideTop.Control = GenericDividerLabel
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 19
-    Top = 22
-    Width = 133
+    Height = 17
+    Top = 20
+    Width = 117
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'HideMouseCheckBox'
