--- a/ide/frames/backup_options.lfm
+++ b/ide/frames/backup_options.lfm
@@ -1,8 +1,8 @@
 inherited BackupOptionsFrame: TBackupOptionsFrame
-  Height = 324
+  Height = 284
   Width = 562
-  ClientHeight = 320
-  ClientWidth = 558
+  ClientHeight = 284
+  ClientWidth = 562
   TabOrder = 0
   Visible = False
   DesignLeft = 346
@@ -12,267 +12,303 @@ inherited BackupOptionsFrame: TBackupOptionsFrame
     AnchorSideTop.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 0
-    Height = 18
+    Height = 14
     Top = 0
-    Width = 111
+    Width = 81
     Caption = 'BackupHelpLabel'
     ParentColor = False
   end
-  object BackupProjectGroupBox: TGroupBox[1]
+  object Bevel1a: TBevel[1]
     AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = BackupProjectGroupLabel
+    AnchorSideTop.Side = asrCenter
+    Left = 0
+    Height = 3
+    Top = 26
+    Width = 60
+  end
+  object BackupProjectGroupLabel: TLabel[2]
+    AnchorSideLeft.Control = Bevel1a
+    AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = BackupHelpLabel
     AnchorSideTop.Side = asrBottom
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
-    Left = 0
-    Height = 166
-    Top = 24
-    Width = 558
-    Anchors = [akTop, akLeft, akRight]
-    AutoSize = True
+    Left = 70
+    Height = 14
+    Top = 20
+    Width = 147
+    BorderSpacing.Left = 10
     BorderSpacing.Top = 6
-    Caption = 'BackupProjectGroupBox'
-    ClientHeight = 147
-    ClientWidth = 554
-    TabOrder = 0
-    object BakProjAddExtLabel: TLabel
-      AnchorSideLeft.Control = BakProjAddExtComboBox
-      AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = BakProjAddExtComboBox
-      AnchorSideTop.Side = asrCenter
-      AnchorSideRight.Control = BackupProjectGroupBox
-      AnchorSideRight.Side = asrBottom
-      Left = 112
-      Height = 18
-      Top = 47
-      Width = 436
-      Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Around = 6
-      Caption = 'BakProjAddExtLabel'
-      ParentColor = False
-    end
-    object BakProjMaxCounterLabel: TLabel
-      AnchorSideLeft.Control = BakProjMaxCounterComboBox
-      AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = BakProjMaxCounterComboBox
-      AnchorSideTop.Side = asrCenter
-      AnchorSideRight.Control = BackupProjectGroupBox
-      AnchorSideRight.Side = asrBottom
-      Left = 112
-      Height = 18
-      Top = 82
-      Width = 436
-      Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Around = 6
-      Caption = 'BakProjMaxCounterLabel'
-      ParentColor = False
-    end
-    object BakProjSubDirLabel: TLabel
-      AnchorSideLeft.Control = BakProjSubDirComboBox
-      AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = BakProjSubDirComboBox
-      AnchorSideTop.Side = asrCenter
-      AnchorSideRight.Control = BackupProjectGroupBox
-      AnchorSideRight.Side = asrBottom
-      Left = 112
-      Height = 18
-      Top = 117
-      Width = 436
-      Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Around = 6
-      Caption = 'BakProjSubDirLabel'
-      ParentColor = False
-    end
-    object BakProjTypeRadioGroup: TRadioGroup
-      AnchorSideRight.Control = BackupProjectGroupBox
-      AnchorSideRight.Side = asrBottom
-      Left = 6
-      Height = 30
-      Top = 6
-      Width = 542
-      Anchors = [akTop, akLeft, akRight]
-      AutoFill = True
-      AutoSize = True
-      BorderSpacing.Around = 6
-      Caption = 'BakProjTypeRadioGroup'
-      ChildSizing.LeftRightSpacing = 6
-      ChildSizing.TopBottomSpacing = 6
-      ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-      ChildSizing.EnlargeVertical = crsHomogenousChildResize
-      ChildSizing.ShrinkHorizontal = crsScaleChilds
-      ChildSizing.ShrinkVertical = crsScaleChilds
-      ChildSizing.Layout = cclLeftToRightThenTopToBottom
-      ChildSizing.ControlsPerLine = 2
-      Columns = 2
-      Constraints.MinHeight = 30
-      OnClick = BakTypeRadioGroupClick
-      TabOrder = 0
-    end
-    object BakProjAddExtComboBox: TComboBox
-      AnchorSideTop.Control = BakProjTypeRadioGroup
-      AnchorSideTop.Side = asrBottom
-      Left = 6
-      Height = 29
-      Top = 42
-      Width = 100
-      AutoSelect = True
-      BorderSpacing.Around = 6
-      ItemHeight = 0
-      TabOrder = 1
-      Text = 'BakProjAddExtComboBox'
-    end
-    object BakProjMaxCounterComboBox: TComboBox
-      AnchorSideTop.Control = BakProjAddExtComboBox
-      AnchorSideTop.Side = asrBottom
-      Left = 6
-      Height = 29
-      Top = 77
-      Width = 100
-      AutoSelect = True
-      BorderSpacing.Around = 6
-      ItemHeight = 0
-      TabOrder = 2
-      Text = 'BakProjMaxCounterComboBox'
-    end
-    object BakProjSubDirComboBox: TComboBox
-      AnchorSideTop.Control = BakProjMaxCounterComboBox
-      AnchorSideTop.Side = asrBottom
-      Left = 6
-      Height = 29
-      Top = 112
-      Width = 100
-      AutoSelect = True
-      BorderSpacing.Around = 6
-      ItemHeight = 0
-      TabOrder = 3
-      Text = 'BakProjSubDirComboBox'
-    end
+    Caption = 'BackupProjectGroupLabel'
+    Font.Style = [fsBold]
+    ParentColor = False
+    ParentFont = False
   end
-  object BackupOtherGroupBox: TGroupBox[2]
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = BackupProjectGroupBox
-    AnchorSideTop.Side = asrBottom
+  object Bevel1b: TBevel[3]
+    AnchorSideLeft.Control = BackupProjectGroupLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BackupProjectGroupLabel
+    AnchorSideTop.Side = asrCenter
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 0
-    Height = 166
-    Top = 196
-    Width = 558
+    Left = 227
+    Height = 3
+    Top = 26
+    Width = 335
     Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Left = 10
+  end
+  object BakProjTypeRadioGroup: TRadioGroup[4]
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = BackupProjectGroupLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Side = asrBottom
+    Left = 6
+    Height = 102
+    Top = 40
+    Width = 228
+    AutoFill = True
     AutoSize = True
-    BorderSpacing.Top = 6
-    Caption = 'BackupOtherGroupBox'
-    ClientHeight = 147
-    ClientWidth = 554
+    BorderSpacing.Around = 6
+    Caption = 'BakProjTypeRadioGroup'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.TopBottomSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousChildResize
+    ChildSizing.ShrinkHorizontal = crsScaleChilds
+    ChildSizing.ShrinkVertical = crsScaleChilds
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 1
+    Constraints.MinHeight = 30
+    OnClick = BakTypeRadioGroupClick
+    TabOrder = 0
+  end
+  object BakProjAddExtComboBox: TComboBox[5]
+    AnchorSideLeft.Control = BakProjTypeRadioGroup
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakProjTypeRadioGroup
+    Left = 240
+    Height = 21
+    Top = 46
+    Width = 100
+    BorderSpacing.Around = 6
+    ItemHeight = 13
     TabOrder = 1
-    object BakOtherAddExtLabel: TLabel
-      AnchorSideLeft.Control = BakOtherAddExtComboBox
-      AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = BakOtherAddExtComboBox
-      AnchorSideTop.Side = asrCenter
-      AnchorSideRight.Control = BackupOtherGroupBox
-      AnchorSideRight.Side = asrBottom
-      Left = 112
-      Height = 18
-      Top = 47
-      Width = 436
-      Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Around = 6
-      Caption = 'BakOtherAddExtLabel'
-      ParentColor = False
-    end
-    object BakOtherMaxCounterLabel: TLabel
-      AnchorSideLeft.Control = BakOtherMaxCounterComboBox
-      AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = BakOtherMaxCounterComboBox
-      AnchorSideTop.Side = asrCenter
-      AnchorSideRight.Control = BackupOtherGroupBox
-      AnchorSideRight.Side = asrBottom
-      Left = 112
-      Height = 18
-      Top = 82
-      Width = 436
-      Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Around = 6
-      Caption = 'BakOtherMaxCounterLabel'
-      ParentColor = False
-    end
-    object BakOtherSubDirLabel: TLabel
-      AnchorSideLeft.Control = BakOtherSubDirComboBox
-      AnchorSideLeft.Side = asrBottom
-      AnchorSideTop.Control = BakOtherSubDirComboBox
-      AnchorSideTop.Side = asrCenter
-      AnchorSideRight.Control = BackupOtherGroupBox
-      AnchorSideRight.Side = asrBottom
-      Left = 112
-      Height = 18
-      Top = 117
-      Width = 436
-      Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Around = 6
-      Caption = 'BakOtherSubDirLabel'
-      ParentColor = False
-    end
-    object BakOtherTypeRadioGroup: TRadioGroup
-      AnchorSideRight.Control = BackupOtherGroupBox
-      AnchorSideRight.Side = asrBottom
-      Left = 6
-      Height = 30
-      Top = 6
-      Width = 542
-      Anchors = [akTop, akLeft, akRight]
-      AutoFill = True
-      AutoSize = True
-      BorderSpacing.Around = 6
-      Caption = 'BakOtherTypeRadioGroup'
-      ChildSizing.LeftRightSpacing = 6
-      ChildSizing.TopBottomSpacing = 6
-      ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-      ChildSizing.EnlargeVertical = crsHomogenousChildResize
-      ChildSizing.ShrinkHorizontal = crsScaleChilds
-      ChildSizing.ShrinkVertical = crsScaleChilds
-      ChildSizing.Layout = cclLeftToRightThenTopToBottom
-      ChildSizing.ControlsPerLine = 2
-      Columns = 2
-      Constraints.MinHeight = 30
-      OnClick = BakTypeRadioGroupClick
-      TabOrder = 0
-    end
-    object BakOtherAddExtComboBox: TComboBox
-      AnchorSideTop.Control = BakOtherTypeRadioGroup
-      AnchorSideTop.Side = asrBottom
-      Left = 6
-      Height = 29
-      Top = 42
-      Width = 100
-      BorderSpacing.Around = 6
-      ItemHeight = 0
-      TabOrder = 1
-      Text = 'BakOtherAddExtComboBox'
-    end
-    object BakOtherMaxCounterComboBox: TComboBox
-      AnchorSideTop.Control = BakOtherAddExtComboBox
-      AnchorSideTop.Side = asrBottom
-      Left = 6
-      Height = 29
-      Top = 77
-      Width = 100
-      BorderSpacing.Around = 6
-      ItemHeight = 0
-      TabOrder = 2
-      Text = 'BakOtherMaxCounterComboBox'
-    end
-    object BakOtherSubDirComboBox: TComboBox
-      AnchorSideTop.Control = BakOtherMaxCounterComboBox
-      AnchorSideTop.Side = asrBottom
-      Left = 6
-      Height = 29
-      Top = 112
-      Width = 100
-      BorderSpacing.Around = 6
-      ItemHeight = 0
-      TabOrder = 3
-      Text = 'BakOtherSubDirComboBox'
-    end
+    Text = 'BakProjAddExtComboBox'
+  end
+  object BakProjMaxCounterComboBox: TComboBox[6]
+    AnchorSideLeft.Control = BakProjTypeRadioGroup
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakProjAddExtComboBox
+    AnchorSideTop.Side = asrBottom
+    Left = 240
+    Height = 21
+    Top = 73
+    Width = 100
+    BorderSpacing.Around = 6
+    ItemHeight = 13
+    TabOrder = 2
+    Text = 'BakProjMaxCounterComboBox'
+  end
+  object BakProjSubDirComboBox: TComboBox[7]
+    AnchorSideLeft.Control = BakProjTypeRadioGroup
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakProjMaxCounterComboBox
+    AnchorSideTop.Side = asrBottom
+    Left = 240
+    Height = 21
+    Top = 100
+    Width = 100
+    BorderSpacing.Around = 6
+    ItemHeight = 13
+    TabOrder = 3
+    Text = 'BakProjSubDirComboBox'
+  end
+  object BakProjSubDirLabel: TLabel[8]
+    AnchorSideLeft.Control = BakProjSubDirComboBox
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakProjSubDirComboBox
+    AnchorSideTop.Side = asrCenter
+    AnchorSideRight.Side = asrBottom
+    Left = 346
+    Height = 14
+    Top = 103
+    Width = 93
+    BorderSpacing.Left = 6
+    Caption = 'BakProjSubDirLabel'
+    ParentColor = False
+  end
+  object BakProjMaxCounterLabel: TLabel[9]
+    AnchorSideLeft.Control = BakProjMaxCounterComboBox
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakProjMaxCounterComboBox
+    AnchorSideTop.Side = asrCenter
+    AnchorSideRight.Side = asrBottom
+    Left = 346
+    Height = 14
+    Top = 76
+    Width = 121
+    BorderSpacing.Left = 6
+    Caption = 'BakProjMaxCounterLabel'
+    ParentColor = False
+  end
+  object BakProjAddExtLabel: TLabel[10]
+    AnchorSideLeft.Control = BakProjAddExtComboBox
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakProjAddExtComboBox
+    AnchorSideTop.Side = asrCenter
+    AnchorSideRight.Side = asrBottom
+    Left = 346
+    Height = 14
+    Top = 49
+    Width = 97
+    BorderSpacing.Left = 6
+    Caption = 'BakProjAddExtLabel'
+    ParentColor = False
+  end
+  object Bevel2a: TBevel[11]
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = BackupOtherGroupLabel
+    AnchorSideTop.Side = asrCenter
+    Left = 0
+    Height = 3
+    Top = 154
+    Width = 60
+  end
+  object Bevel2b: TBevel[12]
+    AnchorSideLeft.Control = BackupOtherGroupLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BackupOtherGroupLabel
+    AnchorSideTop.Side = asrCenter
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 218
+    Height = 3
+    Top = 154
+    Width = 344
+    Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.Left = 10
+  end
+  object BackupOtherGroupLabel: TLabel[13]
+    AnchorSideLeft.Control = Bevel2a
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakProjTypeRadioGroup
+    AnchorSideTop.Side = asrBottom
+    Left = 70
+    Height = 14
+    Top = 148
+    Width = 138
+    BorderSpacing.Left = 10
+    Caption = 'BackupOtherGroupLabel'
+    Font.Style = [fsBold]
+    ParentColor = False
+    ParentFont = False
+  end
+  object BakOtherAddExtLabel: TLabel[14]
+    AnchorSideLeft.Control = BakOtherAddExtComboBox
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakOtherAddExtComboBox
+    AnchorSideTop.Side = asrCenter
+    AnchorSideRight.Side = asrBottom
+    Left = 346
+    Height = 14
+    Top = 177
+    Width = 106
+    BorderSpacing.Left = 6
+    Caption = 'BakOtherAddExtLabel'
+    ParentColor = False
+  end
+  object BakOtherMaxCounterLabel: TLabel[15]
+    AnchorSideLeft.Control = BakOtherMaxCounterComboBox
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakOtherMaxCounterComboBox
+    AnchorSideTop.Side = asrCenter
+    AnchorSideRight.Side = asrBottom
+    Left = 346
+    Height = 14
+    Top = 204
+    Width = 130
+    BorderSpacing.Left = 6
+    Caption = 'BakOtherMaxCounterLabel'
+    ParentColor = False
+  end
+  object BakOtherSubDirLabel: TLabel[16]
+    AnchorSideLeft.Control = BakOtherSubDirComboBox
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakOtherSubDirComboBox
+    AnchorSideTop.Side = asrCenter
+    AnchorSideRight.Side = asrBottom
+    Left = 346
+    Height = 14
+    Top = 231
+    Width = 102
+    BorderSpacing.Left = 6
+    Caption = 'BakOtherSubDirLabel'
+    ParentColor = False
+  end
+  object BakOtherTypeRadioGroup: TRadioGroup[17]
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = BackupOtherGroupLabel
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Side = asrBottom
+    Left = 6
+    Height = 102
+    Top = 168
+    Width = 228
+    AutoFill = True
+    AutoSize = True
+    BorderSpacing.Around = 6
+    Caption = 'BakOtherTypeRadioGroup'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.TopBottomSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousChildResize
+    ChildSizing.ShrinkHorizontal = crsScaleChilds
+    ChildSizing.ShrinkVertical = crsScaleChilds
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 1
+    Constraints.MinHeight = 30
+    OnClick = BakTypeRadioGroupClick
+    TabOrder = 4
+  end
+  object BakOtherAddExtComboBox: TComboBox[18]
+    AnchorSideLeft.Control = BakOtherTypeRadioGroup
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakOtherTypeRadioGroup
+    Left = 240
+    Height = 21
+    Top = 174
+    Width = 100
+    BorderSpacing.Around = 6
+    ItemHeight = 13
+    TabOrder = 5
+    Text = 'BakOtherAddExtComboBox'
+  end
+  object BakOtherMaxCounterComboBox: TComboBox[19]
+    AnchorSideLeft.Control = BakOtherTypeRadioGroup
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakOtherAddExtComboBox
+    AnchorSideTop.Side = asrBottom
+    Left = 240
+    Height = 21
+    Top = 201
+    Width = 100
+    BorderSpacing.Around = 6
+    ItemHeight = 13
+    TabOrder = 6
+    Text = 'BakOtherMaxCounterComboBox'
+  end
+  object BakOtherSubDirComboBox: TComboBox[20]
+    AnchorSideLeft.Control = BakOtherTypeRadioGroup
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = BakOtherMaxCounterComboBox
+    AnchorSideTop.Side = asrBottom
+    Left = 240
+    Height = 21
+    Top = 228
+    Width = 100
+    BorderSpacing.Around = 6
+    ItemHeight = 13
+    TabOrder = 7
+    Text = 'BakOtherSubDirComboBox'
   end
 end
