lcl: calendar popup form should have pmActive popup mode to be on top of parent stayontop forms (#0010092)
git-svn-id: http://svn.freepascal.org/svn/lazarus/trunk@25102 4005530d-fff6-0310-9dd1-cebe43e6787f

--- a/lcl/forms/calendarpopup.lfm
+++ b/lcl/forms/calendarpopup.lfm
@@ -3,7 +3,6 @@ object CalendarPopupForm: TCalendarPopupForm
   Height = 192
   Top = 259
   Width = 233
-  ActiveControl = Calendar
   AutoSize = True
   BorderIcons = [biMinimize, biMaximize]
   BorderStyle = bsNone
@@ -12,12 +11,13 @@ object CalendarPopupForm: TCalendarPopupForm
   ClientWidth = 233
   OnClose = FormClose
   OnDeactivate = FormDeactivate
-  LCLVersion = '0.9.27'
+  PopupMode = pmAuto
+  LCLVersion = '0.9.29'
   object Calendar: TCalendar
     Left = 1
-    Height = 190
+    Height = 153
     Top = 1
-    Width = 231
+    Width = 162
     AutoSize = True
     BorderSpacing.Around = 1
     DateTime = 38823
